--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/devamm/memhams#readme",
   "dependencies": {
+    "@stomp/stompjs": "^5.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-router-dom": "^5.0.1",
+    "sockjs-client": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
