--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "sockjs-client": "^1.3.0"
-  },
-  "devDependencies": {
+    "sockjs-client": "^1.3.0",
     "@babel/core": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
-    "webpack": "^4.35.2",
+    "webpack": "^4.35.2"
+  },
+  "devDependencies": {
     "webpack-cli": "^3.3.5"
   }
 }
