--- a/package.json
+++ b/package.json
@@ -18,20 +18,20 @@
   },
   "homepage": "https://github.com/devamm/memhams#readme",
   "dependencies": {
-    "@stomp/stompjs": "^5.4.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1",
-    "sockjs-client": "^1.3.0",
     "@babel/core": "^7.4.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
+    "@stomp/stompjs": "^5.4.2",
     "babel-loader": "^8.0.6",
+    "css-loader": "^3.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.1",
+    "sockjs-client": "^1.3.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
     "webpack-cli": "^3.3.5"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
