--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "css-loader": "^3.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "sockjs-client": "^1.3.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.35.2",
