--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack -p",
-    "build": "webpack -p"
+    "start": "webpack",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
